etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Sun Jan 17 16:15:47 2016
*filter
:INPUT DROP [1748:112452]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [29599:7195623]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -s 68.175.0.0/16 -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -s 68.175.0.0/16 -p tcp -m tcp -j ACCEPT
COMMIT
# Completed on Sun Jan 17 16:15:47 2016
